Added dynamic title functionality

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
 			name="description"
 		/>
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
-		<title>Rail for Less</title>
+		<title>RailForLess.us</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
