New map features

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 		<title>RailForLess.us</title>
 	</head>
 	<body>
+		<script src="https://www.google.com/recaptcha/api.js?render=6Lfpbj4pAAAAALNTCxTBOH-OdifJBosvFNDjBHbl"></script>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
