API integration and option display

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link href="#" rel="shortcut icon" />
+		<link
+			href="images/favicon/apple-touch-icon.png"
+			rel="apple-touch-icon"
+			sizes="180x180"
+		/>
+		<link
+			href="images/favicon/favicon-32x32.png"
+			rel="icon"
+			sizes="32x32"
+			type="image/png"
+		/>
+		<link
+			href="images/favicon/favicon-16x16.png"
+			rel="icon"
+			sizes="16x16"
+			type="image/png"
+		/>
+		<link href="images/favicon/site.webmanifest" rel="manifest" />
+		<link
+			color="#5bbad5"
+			href="images/favicon/safari-pinned-tab.svg"
+			rel="mask-icon"
+		/>
+		<link href="images/favicon/favicon.ico" rel="shortcut icon" />
+		<meta content="#da532c" name="msapplication-TileColor" />
+		<meta
+			content="images/favicon/browserconfig.xml"
+			name="msapplication-config"
+		/>
+		<meta content="#ffffff" name="theme-color" />
 		<meta charset="utf-8" />
 		<meta content="Sean Eddy" name="author" />
 		<meta
-			content="Find cheap Amtrak fares with flexible scheduling"
+			content="Taking the train shouldn't be a pain. Make your next Amtrak trip a reality with flexible scheduling and the tools you need to plan the perfect trip."
 			name="description"
 		/>
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
+		<script src="https://www.google.com/recaptcha/api.js?render=6Lfpbj4pAAAAALNTCxTBOH-OdifJBosvFNDjBHbl"></script>
 		<title>RailForLess.us</title>
 	</head>
 	<body>
-		<script src="https://www.google.com/recaptcha/api.js?render=6Lfpbj4pAAAAALNTCxTBOH-OdifJBosvFNDjBHbl"></script>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
