Fixed Chrome SVG height bug

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,18 @@
 		/>
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<script src="https://www.google.com/recaptcha/api.js?render=6Lfpbj4pAAAAALNTCxTBOH-OdifJBosvFNDjBHbl"></script>
+		<script
+			data-name="BMC-Widget"
+			data-cfasync="false"
+			src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+			data-id="seaneddy"
+			data-description="Support me on Buy me a coffee!"
+			data-message=""
+			data-color="#FF5F5F"
+			data-position="Right"
+			data-x_margin="18"
+			data-y_margin="18"
+		></script>
 		<title>RailForLess.us</title>
 	</head>
 	<body>
