Cloudflare Turnstile integrated

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,10 @@
 			name="description"
 		/>
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
-		<script src="https://www.google.com/recaptcha/api.js?render=6Lfpbj4pAAAAALNTCxTBOH-OdifJBosvFNDjBHbl"></script>
+		<script
+			defer
+			src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit"
+		></script>
 		<script
 			data-name="BMC-Widget"
 			data-cfasync="false"
