--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,10 @@
 			data-name="BMC-Widget"
 			data-cfasync="false"
 			src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
-			data-id="seaneddy"
+			data-id="railforless"
 			data-description="Support me on Buy me a coffee!"
 			data-message=""
-			data-color="#FF5F5F"
+			data-color="#89B3F7"
 			data-position="Right"
 			data-x_margin="18"
 			data-y_margin="18"
