Enable error tracking.

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 			data-x_margin="18"
 			data-y_margin="18"
 		></script>
-		<script src="https://analytics.railforless.us/api/script.js" data-site-id="1" defer></script>
+		<script src="https://analytics.railforless.us/api/script.js" data-site-id="1" data-track-errors="true" async defer></script>
 		<title>RailForLess.us</title>
 	</head>
 	<body>
